crates/pg_syntax/tests/snapshots/postgres_regress/portals@292.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT stringu1 FROM onek WHERE stringu1 = 'DZAAAA';"
---
SelectStmt@0..52
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..15
    ColumnRef@7..15
      Ident@7..15 "stringu1"
  Whitespace@15..16 " "
  From@16..20 "FROM"
  Whitespace@20..21 " "
  RangeVar@21..25
    Ident@21..25 "onek"
  Whitespace@25..26 " "
  Where@26..31 "WHERE"
  Whitespace@31..32 " "
  AExpr@32..51
    ColumnRef@32..40
      Ident@32..40 "stringu1"
    Whitespace@40..41 " "
    Ascii61@41..42 "="
    Whitespace@42..43 " "
    AConst@43..51
      Sconst@43..51 "'DZAAAA'"
  Ascii59@51..52 ";"

