crates/pg_syntax/tests/snapshots/postgres_regress/portals@295.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE current_check (currentid int, payload text);"
---
CreateStmt@0..57
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..26
    Ident@13..26 "current_check"
  Whitespace@26..27 " "
  Ascii40@27..28 "("
  ColumnDef@28..41
    Ident@28..37 "currentid"
    Whitespace@37..38 " "
    TypeName@38..41
      IntP@38..41 "int"
  Ascii44@41..42 ","
  Whitespace@42..43 " "
  ColumnDef@43..55
    Ident@43..50 "payload"
    Whitespace@50..51 " "
    TypeName@51..55
      TextP@51..55 "text"
  Ascii41@55..56 ")"
  Ascii59@56..57 ";"

