crates/pg_syntax/tests/snapshots/postgres_regress/portals@296.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE TABLE current_check_1 () INHERITS (current_check);
---
CreateStmt@0..57
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..28
    Ident@13..28 "current_check_1"
  Whitespace@28..29 " "
  Ascii40@29..30 "("
  Ascii41@30..31 ")"
  Whitespace@31..32 " "
  Inherits@32..40 "INHERITS"
  Whitespace@40..41 " "
  Ascii40@41..42 "("
  RangeVar@42..55
    Ident@42..55 "current_check"
  Ascii41@55..56 ")"
  Ascii59@56..57 ";"

