crates/pg_syntax/tests/snapshots/postgres_regress/portals@299.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO current_check_2 SELECT i, 'P' || i FROM generate_series(10,19) i;"
---
InsertStmt@0..77
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..27
    Ident@12..27 "current_check_2"
  Whitespace@27..28 " "
  SelectStmt@28..76
    Select@28..34 "SELECT"
    Whitespace@34..35 " "
    ResTarget@35..36
      ColumnRef@35..36
        Ident@35..36 "i"
    Ascii44@36..37 ","
    Whitespace@37..38 " "
    ResTarget@38..46
      AExpr@38..46
        AConst@38..41
          Sconst@38..41 "'P'"
        Whitespace@41..42 " "
        Op@42..44 "||"
        Whitespace@44..45 " "
        ColumnRef@45..46
          Ident@45..46 "i"
    Whitespace@46..47 " "
    From@47..51 "FROM"
    Whitespace@51..52 " "
    RangeFunction@52..76
      List@52..73
        FuncCall@52..73
          Ident@52..67 "generate_series"
          Ascii40@67..68 "("
          AConst@68..70
            Iconst@68..70 "10"
          Ascii44@70..71 ","
          AConst@71..73
            Iconst@71..73 "19"
      Ascii41@73..74 ")"
      Whitespace@74..75 " "
      Alias@75..76
        Ident@75..76 "i"
  Ascii59@76..77 ";"

