crates/pg_syntax/tests/snapshots/postgres_regress/portals@311.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE TABLE cursor (a int);
---
CreateStmt@0..28
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..19
    Cursor@13..19 "cursor"
  Whitespace@19..20 " "
  Ascii40@20..21 "("
  ColumnDef@21..26
    Ident@21..22 "a"
    Whitespace@22..23 " "
    TypeName@23..26
      IntP@23..26 "int"
  Ascii41@26..27 ")"
  Ascii59@27..28 ";"

