crates/pg_syntax/tests/snapshots/postgres_regress/portals@319.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create function nochange(int) returns int\n  as 'select $1 limit 1' language sql stable;"
---
CreateFunctionStmt@0..87
  Create@0..6 "create"
  Whitespace@6..7 " "
  Function@7..15 "function"
  Whitespace@15..16 " "
  Ident@16..24 "nochange"
  Ascii40@24..25 "("
  FunctionParameter@25..28
    TypeName@25..28
      IntP@25..28 "int"
  Ascii41@28..29 ")"
  Whitespace@29..30 " "
  Returns@30..37 "returns"
  Whitespace@37..38 " "
  TypeName@38..41
    IntP@38..41 "int"
  Newline@41..42 "\n"
  Whitespace@42..44 "  "
  DefElem@44..66
    As@44..46 "as"
    Whitespace@46..47 " "
    List@47..66
      Sconst@47..66 "'select $1 limit 1'"
  Whitespace@66..67 " "
  DefElem@67..79
    Language@67..75 "language"
    Whitespace@75..76 " "
    SqlP@76..79 "sql"
  Whitespace@79..80 " "
  DefElem@80..86
    Stable@80..86 "stable"
  Ascii59@86..87 ";"

